--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <section class="card fourth hide">
             <h2>Karta Czwarta</h2>
         </section>
-        <script src="../paralax/paralaxMouseMove.js"></script>
+        <script src="js/paralaxMouseMove.js"></script>
         <script src="js/cards.js"></script>
         <script src="js/liveType.js"></script>
         <script src="js/main.js"></script>
