welcome card, viewportChecer, liveType

--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
             <div class="stars" style="background-size:30%" ></div>
             <div class="stars" style="background-size:20%" ></div>
             <div class="stars" style="background-size:10%" ></div>
-            <div class="fullScreen flex">
-                <h2 id="welcome" class="code">HEj</h2>
-                <img class="portret">
-                <p id="description" class="code"></p>
-                <button class="button1 nextButton" >v</button>
+            <div class="fullScreen flex container">
+                <h2 id="welcome" class="code">Cześć! Jestem Kuba :)</h2>
+                <img class="portrait opacity0" src="layout/pics/portrait.jpg">
+                <p id="description" class="code opacity0">Chciałbym być Front-End developerem.<br> To moje porfolio.</p>
             </div>
+            <button class="button1 nextButton opacity0" >v</button>
+
         </section>
         <section class="card second hide">
             <img id="float" class="fullScreenImg" src="layout/pics/pies.jpg"/>
@@ -41,6 +42,7 @@
         <section class="card fourth hide">
             <h2>Karta Czwarta</h2>
         </section>
+        <script src="js/viewportChecker.js"></script>
         <script src="js/paralaxMouseMove.js"></script>
         <script src="js/cards.js"></script>
         <script src="js/liveType.js"></script>
