about, skills prepared

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </section>
             <button class="downloadCV">Pobierz CV</button>
         </section>
-        <section class="card contact">
+        <section class="card contact hide">
             
         </section>
         
