--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     Są też dni kiedy wolę po prostu zrelaksować się oglądając dobry film ablo czytając ciekawą książkę, spędzić czas ze znajomymi lub posiedzieć samemu otoczony ulubioną muzyką. 
                 </p>
             </section>
-            
+            <button class="button1 nextButton" >v</button>
         </section>
         <section class="card skills hide">
             <!--<img id="sky" class="fullScreenImg" src="layout/pics/sky.png"/>
@@ -89,6 +89,7 @@
                 <section>
                     <h3 class="opacity0">Planuję naukę</h3>
                     <ul class="skillsList flex">
+                        <li class="opacity0">SCSS</li>
                         <li class="opacity0">Bootstrap</li>
                         <li class="opacity0">Angular.js</li>
                         <li class="opacity0">Photoshop</li>
@@ -96,6 +97,8 @@
                     </ul>
                 </section>
                 <button class="downloadCV">Pobierz CV</button> 
+                <button class="button1 nextButton" >v</button>
+
             </div>
             
         </section>
