C:/Program Files/Git/game update

--- a/game/index.html
+++ b/game/index.html
@@ -4,6 +4,8 @@
     <title>Webpack example</title>
   </head>
   <body>
-    <canvas id="canvas" class="canvas"></canvas>
+    <canvas id="backGround" class="canvas"></canvas>
+    <canvas id="playGround" class="canvas"></canvas>
+
   <script src="module.js"></script></body>
 </html>
