--- a/game/index.html
+++ b/game/index.html
@@ -1,31 +1,11 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
-
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
-
-    <link rel="stylesheet" href="css/app.css">
-</head>
-
-<body>
-    <!--
-    <div class="stars" style="background-size:30%" ></div>
-    <div class="stars" style="background-size:20%" ></div>
-    <div class="stars" style="background-size:10%" ></div>
-    -->
-    <div id="game-over-overlay">
-
-    </div>
-    <div id="game-over">
-        <h1>GAME OVER</h1>
-        <button id="play-again">Play Again</button>
-    </div>
-
-    <div id="score"></div>
-<script src="common.js"></script><script src="module.js"></script></body>
-
+    <head>
+        <meta charset="utf-8">
+        <title>Cosmodrom</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+        <link rel="stylesheet" href="css/app.css">
+    </head>
+    <body><script src="common.js"></script><script src="module.js"></script></body>
 </html>
